[gd_scene load_steps=5 format=3 uid="uid://c1u3fxi70uw50"]

[ext_resource type="Script" path="res://level_overview/level_overview.gd" id="1_mi7ab"]
[ext_resource type="Texture2D" uid="uid://oa4wif6eh2s5" path="res://assets/Backgrounds/main_menu_scene/main-menu-background.png" id="2_p8lcv"]
[ext_resource type="Texture2D" uid="uid://ccbpha03xph5y" path="res://assets/icons/level1_button/lvl_1_button.png" id="3_hinug"]
[ext_resource type="Texture2D" uid="uid://dlt8ei7nbjtgv" path="res://assets/icons/level2_button/lvl_2_button.png" id="4_lmkgn"]

[node name="level_overview" type="Node2D"]
script = ExtResource("1_mi7ab")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576, 324)
texture = ExtResource("2_p8lcv")

[node name="Menu_Button" type="Button" parent="."]
offset_left = 900.0
offset_top = 500.0
offset_right = 1038.0
offset_bottom = 531.0
text = "<-- Back to Menu"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 48.0
offset_top = 41.0
offset_right = 226.0
offset_bottom = 238.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Level_1_Button" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("3_hinug")
flat = true

[node name="Level_2_Button" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("4_lmkgn")
flat = true

[node name="Level_3_Button" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Level 3"

[connection signal="pressed" from="Menu_Button" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Level_1_Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Level_2_Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Level_3_Button" to="." method="_on_level_3_button_pressed"]
